--- a/package.json
+++ b/package.json
@@ -1,5 +1,7 @@
 {
   "dependencies": {
-    "dsteem": "^0.11.3"
+    "dsteem": "^0.11.3",
+    "request": "^2.88.2",
+    "rquest": "^0.1.0"
   }
 }
